--- a/Solutions/Corvus.ContentHandling/Corvus.ContentHandling.csproj
+++ b/Solutions/Corvus.ContentHandling/Corvus.ContentHandling.csproj
@@ -3,8 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageDescription></PackageDescription>
+    <PackageTags></PackageTags>
+    <PackageReleaseNotes></PackageReleaseNotes>
+  </PropertyGroup>
   
-  <Import Project="..\Common.netstandard2_0.proj" />
+  <Import Project="..\Common.NetStandard_2_0.proj" />
   
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.2.1" />
