Refactored away the low-level Newtonsoft.Json extensions and brought them back in from the external package.

--- a/Solutions/Corvus.ContentHandling.Json.Specs/Corvus.ContentHandling.Json.Specs.csproj
+++ b/Solutions/Corvus.ContentHandling.Json.Specs/Corvus.ContentHandling.Json.Specs.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Corvus.Extensions.Newtonsoft.Json" Version="0.1.0" />
     <PackageReference Include="Corvus.SpecFlow.Extensions" Version="0.1.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="SpecFlow" Version="3.0.225" />
