--- a/Solutions/Corvus.ContentHandling.Json/Corvus.ContentHandling.Json.csproj
+++ b/Solutions/Corvus.ContentHandling.Json/Corvus.ContentHandling.Json.csproj
@@ -14,6 +14,7 @@
   <Import Project="..\Common.NetStandard_2_0.proj" />
   
   <ItemGroup>
+    <PackageReference Include="Corvus.Extensions.Newtonsoft.Json" Version="0.1.0" />
     <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.2.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
