--- a/imm.yaml
+++ b/imm.yaml
@@ -38,8 +38,8 @@
     Id: 2a7fc206-d578-41b0-85f6-a28b6b0fec5f
     Measures:
         -
-            Score: 0
-            Description: None
+            Score: 1
+            Description: 'Good quality''
 -
     Name: 'Design & Implementation Documentation'
     Id: f026d5a2-ce1a-4e04-af15-5a35792b164b
@@ -59,7 +59,7 @@
     Id: da4ed776-0365-4d8a-a297-c4e91a14d646
     Measures:
         -
-            Score: 0
+            Date: 2020-03-04
             Description: None
         -
 -
@@ -67,22 +67,22 @@
     Id: 6c0402b3-f0e3-4bd7-83fe-04bb6dca7924
     Measures:
         -
-            Score: 3
+            Framework: netcoreapp3.1
             Description: 'Using the most current LTS version'
 -
     Name: 'Associated Work Items'
     Id: 79b8ff50-7378-4f29-b07c-bcd80746bfd4
     Measures:
         -
-            Score: 0
-            Description: None
+            Score: 2
+            Description: 'Curated Bugs & Features'
 -
     Name: 'Source Code Availability'
     Id: 30e1b40b-b27d-4631-b38d-3172426593ca
     Measures:
         -
-            Score: 0
-            Description: None
+            Score: 3
+            Description: 'Public OSS'
 -
     Name: License
     Id: d96b5bdc-62c7-47b6-bcc4-de31127c08b7
@@ -115,12 +115,12 @@
     Id: 547fd9f5-9caf-449f-82d9-4fba9e7ce13a
     Measures:
         -
-            Score: 0
-            Description: None
+            Score: 1
+            Description: 'Packaged'
+        -
+            Score: 1
+            Description: 'Versioned'
 -
     Name: Deployment
     Id: edea4593-d2dd-485b-bc1b-aaaf18f098f9
-    Measures:
-        -
-            Score: 0
-            Description: None
+    OptOut: true
