Remove spurious quote

--- a/imm.yaml
+++ b/imm.yaml
@@ -39,7 +39,7 @@
     Measures:
         -
             Score: 1
-            Description: 'Good quality''
+            Description: 'Good quality'
 -
     Name: 'Design & Implementation Documentation'
     Id: f026d5a2-ce1a-4e04-af15-5a35792b164b
