Migrate to System.Text.Json

--- a/Solutions/Corvus.ContentHandling.Json/Corvus.ContentHandling.Json.csproj
+++ b/Solutions/Corvus.ContentHandling.Json/Corvus.ContentHandling.Json.csproj
@@ -3,7 +3,8 @@
   <Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -14,7 +15,7 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Corvus.Extensions.Newtonsoft.Json" Version="3.0.1" />
+    <PackageReference Include="Corvus.Json.Serialization" Version="2.0.0-first-working-version.25" />
     <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
