--- a/Solutions/Corvus.ContentHandling.Specs/Corvus.ContentHandling.Specs.csproj
+++ b/Solutions/Corvus.ContentHandling.Specs/Corvus.ContentHandling.Specs.csproj
@@ -3,9 +3,11 @@
   <Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <RootNamespace>Corvus.ContentHandling.Specs</RootNamespace>
+    <Nullable>enable</Nullable>
+    
     <!-- Disabling SA1204 because it prioritizes static/non-static over public/non-public, which doesn't fit very well
          with bindings in SpecFlow.
          Disabling SA1600, SA1602 (all public types and members to be documented) because test projects need to make lots of types
