--- a/Solutions/Corvus.ContentHandling.Json/Corvus.ContentHandling.Json.csproj
+++ b/Solutions/Corvus.ContentHandling.Json/Corvus.ContentHandling.Json.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
