--- a/Solutions/Corvus.ContentHandling.Specs/Corvus.ContentHandling.Specs.csproj
+++ b/Solutions/Corvus.ContentHandling.Specs/Corvus.ContentHandling.Specs.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <RootNamespace>Corvus.ContentHandling.Specs</RootNamespace>
     <Nullable>enable</Nullable>
