--- a/Solutions/Corvus.ContentHandling.Specs/Corvus.ContentHandling.Specs.csproj
+++ b/Solutions/Corvus.ContentHandling.Specs/Corvus.ContentHandling.Specs.csproj
@@ -13,6 +13,7 @@
          Disabling SA1600, SA1602 (all public types and members to be documented) because test projects need to make lots of types
          public for technical reasaons, but they are not meant for public consumption, so XML doc comments are only
          appropriate if they aid understanding within the project.
+         IDE0290 - use primary ctor: this suggestion tends to be a bit over-eager.
     -->
     <NoWarn>SA0001;SA1204;SA1600;SA1602;CS1591;RCS1102</NoWarn>
   </PropertyGroup>
