Try bumping test projects to .NET 8.0

--- a/Solutions/Corvus.ContentHandling.Json.Specs/Corvus.ContentHandling.Json.Specs.csproj
+++ b/Solutions/Corvus.ContentHandling.Json.Specs/Corvus.ContentHandling.Json.Specs.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <RootNamespace>Corvus.ContentHandling.Json.Specs</RootNamespace>
     <!-- Disabling SA1204 because it prioritizes static/non-static over public/non-public, which doesn't fit very well
