--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,11 @@ jobs:
       # workflow_dispatch inputs are always strings, the type property is just for the UI
       forcePublish: ${{ github.event.inputs.forcePublish == 'true' }}
       skipCleanup: ${{ github.event.inputs.skipCleanup == 'true' }}
+      testPhaseMatrixJson: |
+        {
+          "os": ["windows-latest", "ubuntu-latest"],
+          "dotnetFramework": ["net8.0"]
+        }
       # testArtifactName: ''
       # testArtifactPath: ''
       compilePhaseEnv: ${{ needs.prepareConfig.outputs.RESOLVED_ENV_VARS }}
