Add .NET FX to test matrix
Remove debug output of test log

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,7 +67,12 @@ jobs:
       testPhaseMatrixJson: |
         {
           "os": ["windows-latest", "ubuntu-latest"],
-          "dotnetFramework": ["net8.0", "net9.0"]
+          "dotnetFramework": ["net8.0", "net9.0", "net481"],
+          "exclude": [
+          {
+            "os": "ubuntu-latest",
+            "dotnetFramework": "net481"
+          }
         }
       # testArtifactName: ''
       # testArtifactPath: ''
