Resolve all diagnostics on SDK 9.0.100

--- a/Solutions/Corvus.ContentHandling.Json.Specs/Corvus.ContentHandling.Json.Specs.csproj
+++ b/Solutions/Corvus.ContentHandling.Json.Specs/Corvus.ContentHandling.Json.Specs.csproj
@@ -14,8 +14,10 @@
          Disabling SA1600, SA1602 (all public types and members to be documented) because test projects need to make lots of types
          public for technical reasaons, but they are not meant for public consumption, so XML doc comments are only
          appropriate if they aid understanding within the project.
+         IDE0028 - suggests collection initializer for dictionaries, which I will only stop finding incongruous when dictionaries support this syntax for anything other than an empty collection.
+         IDE0290 - use primary ctor: this suggestion tends to be a bit over-eager.
     -->
-    <NoWarn>SA0001;SA1204;SA1600;SA1602;CS1591</NoWarn>
+    <NoWarn>SA0001;SA1204;SA1600;SA1602;CS1591;IDE0028;IDE0290</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup>
