--- a/Solutions/Corvus.ContentHandling.Json/Corvus.ContentHandling.Json.csproj
+++ b/Solutions/Corvus.ContentHandling.Json/Corvus.ContentHandling.Json.csproj
@@ -12,6 +12,11 @@
     <PackageDescription></PackageDescription>
     <PackageTags></PackageTags>
     <PackageReleaseNotes></PackageReleaseNotes>
+  
+    <!--
+         IDE0290 - use primary ctor: this suggestion tends to be a bit over-eager.
+    -->
+    <NoWarn>$(NoWarn);IDE0290</NoWarn>
   </PropertyGroup>
   
   <ItemGroup>
