Remove net481 from test matrix
We dropped support for .NET Standard 2.0, so it's not even possible to run these for .NET FX now.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,13 +67,7 @@ jobs:
       testPhaseMatrixJson: |
         {
           "os": ["windows-latest", "ubuntu-latest"],
-          "dotnetFramework": ["net8.0", "net9.0", "net481"],
-          "exclude": [
-            {
-              "os": "ubuntu-latest",
-              "dotnetFramework": "net481"
-            }
-          ]
+          "dotnetFramework": ["net8.0", "net9.0"]
         }
       # testArtifactName: ''
       # testArtifactPath: ''
