--- a/Solutions/Corvus.ContentHandling.Json/Corvus.ContentHandling.Json.csproj
+++ b/Solutions/Corvus.ContentHandling.Json/Corvus.ContentHandling.Json.csproj
@@ -20,7 +20,7 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Corvus.Json.Serialization" Version="2.0.0-first-working-version.35" />
+    <PackageReference Include="Corvus.Json.Serialization" Version="2.0.0" />
     <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.15">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
